<resources>
    <string name="app_name">Running Squad</string>
    <string name="acknowledgement">Icon made by Freepik from www.flaticon.com\nPhoto by Jeremy Lapak on Unsplash https://howtodoinjava.com/security/java-aes-encryption-example/</string>
    <string name="title_activity_group_info">GroupInfoActivity</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="material_icon_account">&#xe800;</string>
    <string name="material_icon_password">&#xe9fa;</string>
    <string name="material_icon_email">&#xe99c;</string>
    <string name="material_icon_city">&#xe878;</string>
    <string name="material_icon_flag">&#xe96a;</string>
    <string name="email_hint">Email</string>
    <string name="city_hint">City</string>
    <string name="create_group">Create squad</string>
    <string name="find_group">Find Group</string>
    <string name="squdname_hint">Squad name</string>
    <string name="description_hint">Description</string>
    <string name="login_success">Login successfully!</string>
    <string name="login_fail">Login failed. Please recheck your username and password!</string>
    <string name="register_warning">The username is already in use!</string>
    <string name="squad_warning">The squad name is already in use!</string>
    <string name="squad_success">\"Squad created!\"</string>
    <string name="join_squad">JOIN SQUAD</string>
    <string name="join_squad_warning">Maximum number of members has been reached!</string>
    <string name="join_squad_success">Welcome to our family!</string>
    <string name="title_activity_running">Map</string>

</resources>
