<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background_light"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/register_travel_transparent_background"
        android:orientation="vertical"
        android:paddingBottom="22dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="22dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/running_squad_logo" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:hint="@string/username_hint" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <android.support.design.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="login"
            android:text="@string/login_text" />

        <ProgressBar
            android:id="@+id/login_progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <android.support.design.button.MaterialButton
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="jump2Register"
            android:text="@string/register_text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/register_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/register_travel_transparent_background"
        android:orientation="vertical"
        android:paddingBottom="22dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="22dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/transparent_button_selector"
            android:gravity="right"
            android:text="@string/register_text"
            android:textColor="@color/main_color_grey_700"
            android:textSize="34sp"
            app:fontFamily="sans-serif-smallcaps" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/icon_face"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                app:srcCompat="@drawable/baseline_face_24"
                tools:ignore="DuplicateIds" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:hint="@string/username_hint" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/icon_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                app:srcCompat="@drawable/baseline_https_24"
                tools:ignore="DuplicateIds" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                app:srcCompat="@drawable/baseline_email_24"
                tools:ignore="DuplicateIds" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:hint="@string/email_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                app:srcCompat="@drawable/baseline_location_city_24"
                tools:ignore="DuplicateIds" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:hint="@string/city_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:layout_marginTop="12dp"
            android:gravity="right">

            <android.support.design.button.MaterialButton
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:minWidth="96dp"
                android:onClick="register"
                android:text="@string/register_text" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>