<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_screen_background"
    android:orientation="vertical"
    tools:context=".GroupSearchActivity">

    <LinearLayout
        android:id="@+id/group_search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/register_travel_transparent_background"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Squad Name" />

            <android.support.design.button.MaterialButton
                android:id="@+id/create_squad_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:minWidth="96dp"
                android:onClick="jump2CreateSquad"
                android:text="@string/create_group" />


        </android.support.design.widget.TextInputLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/group_create_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/register_travel_transparent_background"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:visibility="gone">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/transparent_button_selector"
            android:gravity="right"
            android:text="@string/create_group"
            android:textColor="@color/main_color_grey_700"
            android:textSize="34sp"
            app:fontFamily="sans-serif-smallcaps" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/icon_face"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                app:srcCompat="@drawable/baseline_face_24"
                tools:ignore="DuplicateIds" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/create_squad_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:hint="@string/squdname_hint" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/icon_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                app:srcCompat="@drawable/baseline_description_24"
                tools:ignore="DuplicateIds" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/create_squad_desc"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:gravity="top"
                android:hint="@string/description_hint"
                android:inputType="text|textMultiLine" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                app:srcCompat="@drawable/baseline_location_city_24"
                tools:ignore="DuplicateIds" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/create_squad_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:hint="@string/city_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:layout_marginTop="12dp"
            android:gravity="right">

            <android.support.design.button.MaterialButton
                android:id="@+id/create_squad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:minWidth="96dp"
                android:onClick="createSquad"
                android:text="@string/create_group" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>